Fixed overflow issue on the persona selector

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-persona-selector.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-persona-selector.scss
@@ -17,7 +17,6 @@
 		@include size($sizeGrid * 11, auto);
 		@include pos(50%, auto, auto, 0);
 		transform: translateY(-50%);
-		overflow: hidden;
 		position: absolute;
 		z-index: 1;
 		padding-left: $sizeGrid * 3;
